upgrade alert message for scheduling

--- a/index.html
+++ b/index.html
@@ -929,7 +929,7 @@
 
                 <!-- Botão de ação -->
                 <div style="text-align: center; margin-top: 2rem;">
-                    <a href="#" class="btn btn-primary" onclick="alert('Agende sua consulta com um profissional de saúde. Este é um site educativo.');">Agende Seu Exame</a>
+                    <a href="#" class="btn btn-primary" onclick="alert('Agende sua consulta com um profissional de saúde. Este é um site informativo. Canais de Comunicação: Aplicativo/Site. Telefone 136 DISQUE SAÚDE, ou Dirija-se à Unidade Básica de Saúde mais próxima. CONECTE SUS');">Agende Seu Exame</a>
                 </div>
             </div>
         </section>
