add meu sus digital

--- a/index.html
+++ b/index.html
@@ -929,7 +929,7 @@
 
                 <!-- Botão de ação -->
                 <div style="text-align: center; margin-top: 2rem;">
-                    <a href="#" class="btn btn-primary" onclick="alert('Este é um site informativo. Agende sua consulta com um profissional de saúde. Canais de Comunicação: Aplicativo/Site CONECTE SUS; Telefone 136 DISQUE SAÚDE, ou Dirija-se à Unidade Básica de Saúde mais próxima.');">Agende Seu Exame</a>
+                    <a href="#" class="btn btn-primary" onclick="alert('Este é um site informativo. Agende sua consulta com um profissional de saúde. Canais de Comunicação: Aplicativo/Site MEU SUS Digital; Telefone 136 DISQUE SAÚDE, ou Dirija-se à Unidade Básica de Saúde mais próxima.');">Agende Seu Exame</a>
                 </div>
             </div>
         </section>
